[project]
name = "poetry-inv"
version = "0.1.0"
description = ""
authors = [
    {name = "surya2406",email = "surya.rs2406@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (==0.115.8)",
    "uvicorn (==0.34.0)",
    "sqlalchemy (==2.0.38)",
    "asyncpg (==0.30.0)",
    "psycopg2-binary (==2.9.10)",
    "passlib (==1.7.4)",
    "python-jose (==3.3.0)",
    "pdf2image (==1.17.0)",
    "torch (==2.6.0)",
    "torchvision (==0.21.0)",
    "pillow (==11.1.0)",
    "pydantic (==2.10.6)",
    "numpy (==2.2.2)",
    "openai (==1.61.1)",
    "aiosqlite (==0.21.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "bcrypt (==4.2.1)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "distro (==1.9.0)",
    "ecdsa (==0.19.0)",
    "filelock (==3.17.0)",
    "fsspec (==2025.2.0)",
    "greenlet (==3.1.1)",
    "groq (==0.18.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jinja2 (==3.1.5)",
    "jiter (==0.8.2)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.4.2)",
    "orjson (==3.10.15)",
    "packaging (==24.2)",
    "pyasn1 (==0.6.1)",
    "pydantic-core (==2.27.2)",
    "pypdf2 (==3.0.1)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "scipy (==1.15.1)",
    "setuptools (==75.8.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "starlette (==0.45.3)",
    "sympy (==1.13.1)",
    "tenacity (==9.0.0)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "zstandard (==0.23.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "langsmith (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
langchain-groq = {allow-prereleases = true}
langchain-core = {allow-prereleases = true}
langsmith = {allow-prereleases = true}
